--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,10 @@
     <string name="register_etAgain">Again</string>
     <string name="etNickname">Nickname</string>
     <string name="etEmail">Email</string>
-    <string name="btn_addimage">Add Image</string>
+    <string name="btn_Addimage">Add Image</string>
     <string name="etSignup">Sign up</string>
+    <string name="tv_signin">Sign in to GoChat</string>
+    <string name="login_btnSignup">Sign up</string>
+    <string name="tv_loginError">Wrong Username or Password!</string>
+    <string name="tv_register">Sign up to GoChat</string>
 </resources>
