classes, new activities and more ...

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="login_btnSignup">Sign up</string>
     <string name="tv_loginError">Wrong Username or Password!</string>
     <string name="tv_register">Sign up to GoChat</string>
+    <string name="BaseUrl">http://10.0.2.2:7265/api</string>
+    <string name="etTypeMessage">Type a message…</string>
+    <string name="etSend">Send</string>
 </resources>
