--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="etSend">Send</string>
     <string name="btnAdd">Add</string>
     <string name="etConnection">Connection</string>
+    <string name="btnSet">SET</string>
 </resources>
