--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,6 @@
     <string name="etTypeMessage">Type a message…</string>
     <string name="etSend">Send</string>
     <string name="btnAdd">Add</string>
-    <string name="etConnection">Connection</string>
+    <string name="etConnection">Server: http://10.0.2.2:xxxx</string>
     <string name="btnSet">SET</string>
 </resources>
